--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".pdf1"></activity>
+        <activity android:name=".pdf7"></activity>
+        <activity android:name=".pdf6" />
+        <activity android:name=".pdf5" />
+        <activity android:name=".pdf4" />
+        <activity android:name=".pdf3" />
+        <activity android:name=".pdf2" />
+        <activity android:name=".pdf1" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
